[be, db, api, v0, user] add support for muted player-setting
